# radixdlt-rust-sdk

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.es.md  README.md  SECURITY.md
.github/workflows/: ci.yml  release-connector.yml
crates/address/: Cargo.toml  README.es.md  README.md
crates/address/examples/: derive.rs
crates/address/src/: lib.rs
crates/connect/: Cargo.toml  README.es.md  README.md
crates/connect-iroh/: Cargo.toml  README.es.md  README.md
crates/connect-iroh/docs/: PROTOCOL.es.md  PROTOCOL.md
crates/connect-iroh/examples/: login.rs
crates/connect-iroh/src/: lib.rs  protocol.rs
crates/connect-iroh/tests/: login_over_iroh.rs  rola_over_iroh.rs  tx_preauth_over_iroh.rs
crates/connect-types/: Cargo.toml  README.es.md  README.md
crates/connect-types/docs/: SCHEMA.es.md  SCHEMA.md
crates/connect-types/src/: lib.rs
crates/connect/docs/: PROTOCOL.es.md  PROTOCOL.md
crates/connect/examples/: prove.rs
crates/connect/src/: chunking.rs  connector.rs  crypto.rs  error.rs  lib.rs  signaling.rs  state.rs
crates/connector-mcp/: Cargo.toml  README.es.md  README.md
crates/connector-mcp/docs/: ARCHITECTURE.es.md  ARCHITECTURE.md
crates/connector-mcp/src/: gateway.rs  main.rs  qr.rs  rpc.rs  store.rs  tools.rs
crates/gateway-tx/: Cargo.toml  README.es.md  README.md
crates/gateway-tx/docs/: LIFECYCLE.es.md  LIFECYCLE.md
crates/gateway-tx/src/: lib.rs
crates/i18n/: Cargo.toml  README.es.md  README.md
crates/i18n/src/: lib.rs
crates/keystore/: Cargo.toml  README.es.md  README.md
crates/keystore/docs/: FORMAT.es.md  FORMAT.md
crates/keystore/examples/: keygen.rs
crates/keystore/src/: lib.rs
crates/rola/: Cargo.toml  README.es.md  README.md
crates/rola/docs/: SPEC.es.md  SPEC.md
crates/rola/examples/: verify.rs
crates/rola/src/: lib.rs
crates/sdk/: Cargo.toml  README.es.md  README.md
crates/sdk/src/: lib.rs
scripts/: install-connector.ps1  install-connector.sh
