[workspace]
resolver = "2"
members = [
    "crates/i18n",
    "crates/address",
    "crates/rola",
    "crates/keystore",
    "crates/gateway-tx",
    "crates/connect-types",
    "crates/sdk",
]

# Workspace isolated from the PAM project: this tree is the future public
# `radixdlt-rust-sdk` repository (published to crates.io). The application will
# consume it by version/Git later, not by path.

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/genkipool/radixdlt-rust-sdk"
authors = ["Luis Alberto Reoyo Bolaños <68571366+genkipool@users.noreply.github.com>"]
rust-version = "1.80"

[workspace.dependencies]
ed25519-dalek = "2"
blake2 = "0.10"
hex = "0.4"
radix-common = "1.3.1"
radix-transactions = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scrypt = { version = "0.11", default-features = false }
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

# Internal SDK crates (path during development + version for crates.io publishing).
radixdlt-i18n = { path = "crates/i18n", version = "0.1.0" }
radixdlt-address = { path = "crates/address", version = "0.1.0" }
radixdlt-rola = { path = "crates/rola", version = "0.1.0" }
radixdlt-keystore = { path = "crates/keystore", version = "0.1.0" }
radixdlt-gateway-tx = { path = "crates/gateway-tx", version = "0.1.0" }
radixdlt-connect-types = { path = "crates/connect-types", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = true
