# Isolated workspace: the `webrtc` dependency tree conflicts at resolution time with
# the `radix-engine` tree used by `radixdlt-gateway-tx`, so this crate is kept out of
# the main SDK workspace (same approach the original prototype used). It still shares
# `radixdlt-i18n` by path. Publishes to crates.io independently.
[workspace]

[package]
name = "radixdlt-connect"
description = "Radix Connect protocol in native Rust: signaling, WebRTC and wallet interactions (a drop-in for @radixdlt/radix-connect-webrtc)."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/genkipool/radixdlt-rust-sdk"
authors = ["Luis Alberto Reoyo Bolaños <68571366+genkipool@users.noreply.github.com>"]
rust-version = "1.80"
keywords = ["radix", "radixdlt", "radix-connect", "webrtc", "wallet"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
readme = "README.md"

[dependencies]
radixdlt-i18n = { path = "../i18n", version = "0.1.0" }
radixdlt-connect-types = { path = "../connect-types", version = "0.1.0" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
blake2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
webrtc = "0.11"

[dev-dependencies]
# Used by the `prove` example to verify the ROLA proof returned by the wallet.
radixdlt-rola = { path = "../rola" }
