[package]
name = "radixdlt-i18n"
description = "System-locale detection and bilingual (English/Spanish) message helpers for the RadixDLT Rust SDK."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["radix", "radixdlt", "i18n", "locale", "sdk"]
categories = ["localization", "internationalization"]
readme = "README.md"

[dependencies]
